# 3DViewer

./: .gitignore
src/: Makefile
src/3D_Viewer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
src/QtGifImage-master/mkspecs/modules/: qt_lib_gifimage.pri
src/QtGifImage-master/src/gifimage/: qdoc_wrapper.sh  qgifimage.cpp
src/back/: c_code.h  moving.c  reading.c
src/test/: test.c
